# akilan

./: LICENSE  README.md  main.py  pyproject.toml
output/: page_18.json  page_31.json
src/akilan/: __init__.py  atoms.py  base.py  layout_tree.py  logger.py  models.py  page_parser.py  page_renderer.py  text_extraction.py  views.py
